[tool.poetry]
name = "tiantai-bot"
version = "0.1.0"
description = ""
authors = ["Rist <www10177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["all"], version = "^20.8"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
starlette = "^0.37.1"
uvicorn = "^0.27.1"
binance-futures-connector = "^4.0.0"
binance-connector = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
